--- a/src/layouts/components/sections/Clients.astro
+++ b/src/layouts/components/sections/Clients.astro
@@ -2,7 +2,7 @@
 import type { Section } from "@/types";
 import type { z } from "astro:content";
 import { markdownify } from "@/lib/utils/textConverter";
-import { getEntryCTM } from "@/lib/customContentLoader.astro";
+import { getEntryCTM } from "@/lib/contentParser.astro";
 import overrideObjects from "@/lib/utils/overrideObjects.ts";
 import type { clientsSectionSchema } from "@/sections.schema";
 import OptimizedImage from "../utilities/OptimizedImage.astro";
