--- a/src/layouts/components/sections/ServicesSection.astro
+++ b/src/layouts/components/sections/ServicesSection.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollectionCTM, getEntryCTM } from "@/lib/customContentLoader.astro";
+import { getCollectionCTM, getEntryCTM } from "@/lib/contentParser.astro";
 import overrideObjects from "@/lib/utils/overrideObjects.ts";
 import { markdownify } from "@/lib/utils/textConverter";
 import ReactIcons from "@/helpers/ReactIcons.astro";
