--- a/src/layouts/components/widgets/HeaderOffcanvasContent.astro
+++ b/src/layouts/components/widgets/HeaderOffcanvasContent.astro
@@ -1,7 +1,7 @@
 ---
 import social from "@/config/social.json";
 import ReactIcons from "@/helpers/ReactIcons.astro";
-import { parseTomlToJson } from "@/lib/utils/tomlUtils";
+import config from ".astro/config.generated.json" with { type: "json" };
 import Logo from "../global/Logo.astro";
 import { markdownify } from "@/lib/utils/textConverter";
 import Social from "./Social.astro";
@@ -14,7 +14,7 @@ const {
     headerOffcanvas: { enable, logo, description, button },
     contactInfo: { address, phone, email },
   },
-} = parseTomlToJson();
+} = config;
 
 const t = await useTranslations(Astro.currentLocale as string);
 
@@ -69,7 +69,7 @@ if (!enable) {
   <CustomButton
     variant="circle"
     class="btn-accent m-0 ms-auto hidden justify-center lg:flex"
-    label={button?.label || t("headerOffcanvas.buttonLabel")}
     {...button}
+    label={button?.label || t("headerOffcanvas.buttonLabel")}
   />
 </div>
