--- a/src/lib/taxonomyUtils.astro
+++ b/src/lib/taxonomyUtils.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollectionCTM } from "./customContentLoader.astro";
+import { getCollectionCTM } from "./contentParser.astro";
 import { slugifyyy } from "./utils/textConverter.ts";
 import { getLocaleUrlCTM } from "./utils/i18nUtils.ts";
 
