--- a/src/pages/[...lang]/[page].astro
+++ b/src/pages/[...lang]/[page].astro
@@ -1,8 +1,8 @@
 ---
 import Base from "@/layouts/Base.astro";
-import { getCollectionCTM } from "@/lib/customContentLoader.astro";
+import { getCollectionCTM } from "@/lib/contentParser.astro";
 import { supportedLanguages } from "@/lib/utils/i18nUtils";
-import { parseTomlToJson } from "@/lib/utils/tomlUtils";
+import config from ".astro/config.generated.json" with { type: "json" };
 import SinglePageLayout from "@/components/SinglePageLayout.astro";
 import extractSlug from "@/lib/utils/extractSlug";
 
@@ -10,7 +10,6 @@ import extractSlug from "@/lib/utils/extractSlug";
 export async function getStaticPaths() {
   const paths = await Promise.all(
     supportedLanguages.map(async (lang) => {
-      const config = parseTomlToJson();
       const { defaultLanguage, showDefaultLangInUrl } =
         config.settings.multilingual;
 
