--- a/src/layouts/components/sections/Banner.astro
+++ b/src/layouts/components/sections/Banner.astro
@@ -1,7 +1,7 @@
 ---
 import type { z } from "astro/zod";
 import type { Section } from "@/types";
-import { getEntryCTM } from "@/lib/customContentLoader.astro";
+import { getEntryCTM } from "@/lib/contentParser.astro";
 import { markdownify } from "@/lib/utils/textConverter";
 import CustomButton from "@/components/CustomButton.astro";
 import overrideObjects from "@/lib/utils/overrideObjects.ts";
