--- a/src/layouts/components/sections/PricingSection.astro
+++ b/src/layouts/components/sections/PricingSection.astro
@@ -1,6 +1,6 @@
 ---
 import type { z } from "astro/zod";
-import { getEntryCTM } from "@/lib/customContentLoader.astro";
+import { getEntryCTM } from "@/lib/contentParser.astro";
 import { markdownify } from "@/lib/utils/textConverter";
 import overrideObjects from "@/lib/utils/overrideObjects.ts";
 import type { pricingSectionSchema } from "@/sections.schema";
