--- a/src/layouts/components/widgets/PaginationForSingle.astro
+++ b/src/layouts/components/widgets/PaginationForSingle.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollectionCTM } from "@/lib/customContentLoader.astro";
+import { getCollectionCTM } from "@/lib/contentParser.astro";
 import { getLocaleUrlCTM, useTranslations } from "@/lib/utils/i18nUtils";
 import CustomButton from "@/components/CustomButton.astro";
 import type { CollectionEntry } from "astro:content";
